# kelly-watcher

./: .env.example  .gitignore  JOURNAL.md  PLAN.md  README.md  adaptive_confidence.py  alerter.py  auto_retrain.py  beliefs.py  cli.py  config.env  config.env.example  config.py  dashboard_api.py  db.py  dedup.py  economic_model.py  economics.py  env_profile.py  evaluator.py  executor.py  features.py  identity_cache.py  kelly-config.env  kelly-config.env.example  kelly-secrets.env.example  kelly-watcher alias  kelly.py  main.py  market_scorer.py  market_urls.py  performance_preview.py  polymarket_setup.py  pyproject.toml  rank_copytrade_wallets.py  replay.py  replay_runner.py  replay_search.py  replay_search_contract.py  resolve_wallet.py  (+20 more)
backend/: pyproject.toml
dashboard/: api.js  api.ts  bootstrap.js  bootstrap.ts  configEditor.js  configEditor.ts  dashboard.js  dashboard.tsx  envProfile.js  envProfile.ts  format.js  format.ts  identities.js  identities.ts  manualTradeControl.js  manualTradeControl.ts  package-lock.json  package.json  paths.js  (+28 more)
dashboard-cli/: api.js  api.ts  bootstrap.ts  configEditor.js  dashboard.js  dashboard.tsx  envProfile.js  envProfile.ts  format.ts  identities.js  manualTradeControl.js  manualTradeControl.ts  package.json  paths.js  paths.ts  positionEditor.ts  refresh.js  settingsDanger.js  settingsDanger.ts  tableLayout.ts  terminal.js  theme.js  useBotState.js  useBotState.ts  useDb.js  useDb.ts  useEventStream.js  useTradeIdIndex.js  walletWatchState.ts
dashboard-web/: index.html  package-lock.json  package.json  vite.config.ts
(+273 files in other folders)
